# simplified-grav

./: .gitignore  CMakeLists.txt  GravSim.hpp  main.cpp
inc/: Application.hpp  CustomException.hpp  Display.hpp  GravSim.hpp  GravUi.hpp  GuiBase.hpp  Logger.hpp  Vector.hpp  Viewport.hpp
